adding more dao for solr